Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55676

Qt5.8 src win: configure confirms license even if -confirm-license option is not entered

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.3
    • 5.8.0 Alpha
    • Build System
    • Windows
    • a9af3c85022994cfe18a05cd92db9fc0b0ad902c

    Description

      Src packages from 01-Sep-2016

      Extract package, run configure with no options. On windows configure keeps going without asking anything and the license type is not printed, on linux there are prints:
      This is the Qt Technology Preview Edition.

      You are licensed to use this software under the terms of
      the TECHNOLOGY PREVIEW LICENSE AGREEMENT

      Type '?' to read the Preview License.
      Type 'yes' to accept this license offer.
      Type 'no' to decline this license offer.

      All that is missing from Windows configure.

      Attachments

        For Gerrit Dashboard: QTBUG-55676
        # Subject Branch Project Status CR V

        Activity

          People

            kkohne Kai Köhne
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes