win: Show Tech Preview license

Show the tech preview license for commercial users if -confirm-license
is not set. This matches what the configure shell script is doing, too.

Task-number: QTBUG-55676
Change-Id: I69f5553ab53dfcdc14c200e682c024a6cebee8fe
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>